<resources>
    <string name="app_name">Tugas Mobile Sule</string>
    <string name="save">Edit</string>
    <string name="name">Sulaeman</string>
    <string name="student_id">H13116002</string>
    <string name="class_name">Pemrograman Mobile B</string>
    <string name="address">Jl. Perintis Kemerdekaan Km.10, Ramsis Unhas</string>
    <string name="phone_number">085525327542</string>
    <string name="home_number">14022</string>
    <string name="email">sulaiman.tsany@gmail.com</string>
    <string name="github">SulaimanTsany</string>
    <string name="birth">2 January</string>
    <string name="quote">Catatan:
        \n-Gunakan orientasi Landscape
        \n-Klik tombol Edit untuk mengubah data
        \n-Source code : https://github.com/SulaimanTsany/Android-Tugas1
    </string>
    <string-array name="month">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
    <string-array name="religions">
        <item>Islam</item>
        <item>Kristen Protestan</item>
        <item>Katolik</item>
        <item>Hindu</item>
        <item>Budha</item>
        <item>Kong Hu Cu</item>
    </string-array>
</resources>
