<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:src="@drawable/contact_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_compass" />
            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="Name "/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/student_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/class_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/birth" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/phone_number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/home_number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_email" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/email" />
        </LinearLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"  />

    </LinearLayout>


</ScrollView>